@@ -337,7 +337,7 @@ JGLOBAL_INTRO_TEXT="Intro Text"
 JGLOBAL_ISFREESOFTWARE="%s is free software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
 JGLOBAL_LEAST_HITS="Least Hits"
 JGLOBAL_LEFT="Left"
-JGLOBAL_LINK_AUTHOR_DESC="If set to Yes, the Name of the article's Author will be linked to its userprofile.  This is a global setting but can be changed at the Category, Menu and Article levels."
+JGLOBAL_LINK_AUTHOR_DESC="If set to Yes, the Name of the article's Author will be linked to its contact page. You must create a contact linked to the author's user record for this to be ineffect.  This is a global setting but can be changed at the Category, Menu and Article levels."
 JGLOBAL_LINK_AUTHOR_LABEL="Link Author"
 JGLOBAL_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to Yes, the Category Title will link to a layout showing articles in that Category."
 JGLOBAL_LINK_CATEGORY_LABEL="Link Category"
