@@ -101,6 +101,11 @@ class ContentModelArticle extends JModelItem
 				$query->select('u.name AS author');
 				$query->join('LEFT', '#__users AS u on u.id = a.created_by');
 
+				// Join on contact table
+				$query->select('contact.id as contactid' ) ;
+				$query->join('LEFT','#__contact_details AS contact on contact.user_id = a.created_by');
+				
+				
 				// Join over the categories to get parent category titles
 				$query->select('parent.title as parent_title, parent.id as parent_id, parent.path as parent_route, parent.alias as parent_alias');
 				$query->join('LEFT', '#__categories as parent ON parent.id = c.parent_id');
