@@ -69,13 +69,20 @@ $params = &$this->params;
 		<?php echo JText::sprintf('COM_CONTENT_PUBLISHED_DATE', JHTML::_('date',$item->publish_up, JText::_('DATE_FORMAT_LC2'))); ?>
 		</dd>
 <?php endif; ?>
-<?php if ($params->get('show_author') && !empty($item->author)) : ?>
-	<dd class="createdby">
-		<?php $author = $params->get('link_author', 0) ? JHTML::_('link',JRoute::_('index.php?option=com_users&view=profile&member_id='.$item->created_by),$item->author) : $item->author; ?>
-		<?php $author = ($item->created_by_alias ? $item->created_by_alias : $author); ?>
-	<?php echo JText::sprintf('COM_CONTENT_WRITTEN_BY', $author); ?>
-		</dd>
-	<?php endif; ?>
+<?php if ($params->get('show_author') && !empty($item->author )) : ?>
+	<dd class="createdby"> 
+		<?php $author =  $item->author; ?>
+		<?php $author = ($item->created_by_alias ? $item->created_by_alias : $author);?>
+
+			<?php if (!empty($item->contactid ) &&  $params->get('link_author') == true):?>
+				<?php 	echo JText::sprintf('COM_CONTENT_WRITTEN_BY' , 
+				 JHTML::_('link',JRoute::_('index.php?option=com_contact&view=contact&id='.$item->contactid),$author)); ?>
+
+			<?php else :?>
+				<?php echo JText::sprintf('COM_CONTENT_WRITTEN_BY', $author); ?>
+			<?php endif; ?>
+	</dd>
+<?php endif; ?>	
 <?php if ($params->get('show_hits')) : ?>
 		<dd class="hits">
 		<?php echo JText::sprintf('COM_CONTENT_ARTICLE_HITS', $item->hits); ?>
@@ -102,17 +109,17 @@ $params = &$this->params;
 		$link->setVar('return', base64_encode($returnURL));
 	endif;
 ?>
-		<p class="readmore">
-				<a href="<?php echo $link; ?>">
-					<?php if (!$item->params->get('access-view')) :
-						echo JText::_('COM_CONTENT_REGISTER_TO_READ_MORE');
-					elseif ($readmore = $item->alternative_readmore) :
-						echo $readmore;
-					else :
-						echo JText::sprintf('COM_CONTENT_READ_MORE', $this->escape($item->title));
-					endif; ?></a>
-		</p>
-<?php endif; ?>
+				<p class="readmore">
+						<a href="<?php echo $link; ?>">
+							<?php if (!$item->params->get('access-view')) :
+								echo JText::_('COM_CONTENT_REGISTER_TO_READ_MORE');
+							elseif ($readmore = $item->alternative_readmore) :
+								echo $readmore;
+							else :
+								echo JText::sprintf('COM_CONTENT_READ_MORE', $this->escape($item->title));
+							endif; ?></a>
+				</p>
+			<?php endif; ?>
 		<?php endif; ?>
 	</li>
 <?php endforeach; ?>
