@@ -30,6 +30,7 @@ $ -> Language fix or change
 09-Nov-2010 Jean-Marie Simonet
  # [#23177] Ability to set a default template style per language when System - Language Filter plugin is on. Thanks Christophe.
  # [#23132] Some language have issues when translating global strings such as JALL. Thanks Christophe.
+ # [#22839] author link redirects to login form and not to profile of author. Thanks Elin and Bill.
  
 09-Nov-2010 Mark Dexter
 # [#23054] Follow up on Issue 22932 - Alternate Layouts for Components
